texlive-bin (2018.20180118.46355-1) UNRELEASED; urgency=medium

  * New upstream version 2018.20180118.46355
  * update patches to 2018

 -- Norbert Preining <preining@debian.org>  Tue, 16 Jan 2018 14:36:27 +0900

texlive-bin (2017.20170613.44572-8) unstable; urgency=medium

  * support building without icu-config available (Closes: #879801)
  * work around limitation so of (dh_)autoreconf by reimplementing parts
    of the upstream provided reautoconf script logic
  * clean up debian/rules (thanks Hilmar Preuße) after complete reautoconf

 -- Norbert Preining <preining@debian.org>  Mon, 11 Dec 2017 11:14:24 +0900

texlive-bin (2017.20170613.44572-7) unstable; urgency=medium

  * make TL compatible to Poppler >= 0.59 (Closes: #883521)
    - patches from upupstream Han The Thanh and adaptions by ArchLinux
      Thanks to Hilmar Preuße for preparing and testing
    - bump build-dep on libpoppler-private-dev to >= 0.59
  * remove outdated deps on ruby, wish, python (Closes: #883051)
  * bump standards version, no changes necessary

 -- Norbert Preining <preining@debian.org>  Wed, 06 Dec 2017 20:42:18 +0900

texlive-bin (2017.20170613.44572-6) unstable; urgency=medium

  * do not include cwd in PDF ID (Closes: #874102)
  * bump standards version, no changes necessary

 -- Norbert Preining <preining@debian.org>  Mon, 04 Sep 2017 09:23:06 +0900

texlive-bin (2017.20170613.44572-5) unstable; urgency=medium

  * fix changelog mess-up.
  * move tex4ht.jar building to src:texlive-extra to allow for
    bootstrapping (Closes: #870786)

 -- Norbert Preining <preining@debian.org>  Wed, 09 Aug 2017 14:52:18 +0900

texlive-bin (2017.20170613.44572-4) unstable; urgency=medium

  * fix FTBFS with gcc7 (Closes: #870796)
    Thanks Werner Fink for the patch and Hironobu Yamashita for pointing
    me at it.
  * bump standards version, no changes necessary


 -- Norbert Preining <preining@debian.org>  Tue, 08 Aug 2017 07:54:46 +0900
