@@ -2,8 +2,9 @@ texlive-bin (2018.20180118.46355-1) UNRELEASED; urgency=medium
 
   * New upstream version 2018.20180118.46355
   * update patches to 2018
+  * switch to included poppler, Debian's is too old
 
- -- Norbert Preining <preining@debian.org>  Tue, 16 Jan 2018 14:36:27 +0900
+ -- Norbert Preining <preining@debian.org>  Thu, 18 Jan 2018 17:03:43 +0900
 
 texlive-bin (2017.20170613.44572-8) unstable; urgency=medium
 
